# morshed-squad

./: .gitignore  README.md  full_audit.py  launch_morshed_squad.bat  n8n_social_workflow.json  pyproject.toml  rebrand_script.py  requirements.txt
lib/devtools/: pyproject.toml
lib/devtools/src/crewai_devtools/: __init__.py  cli.py
lib/morshed_squad/: README.md  pyproject.toml
lib/morshed_squad/src/morshed_squad/: __init__.py  crew.py  lite_agent.py  lite_agent_output.py  llm.py  mypy.py  task.py
lib/morshed_squad/tests/: utils.py
lib/morshed_squad_files/: README.md  pyproject.toml
lib/morshed_squad_files/src/morshed_squad_files/: __init__.py
lib/morshed_squad_files/src/morshed_squad_files/cache/: __init__.py  cleanup.py  upload_cache.py
lib/morshed_squad_files/src/morshed_squad_files/core/: __init__.py  sources.py  types.py
lib/morshed_squad_files/src/morshed_squad_files/formatting/: __init__.py  anthropic.py  api.py  bedrock.py  gemini.py  openai.py
lib/morshed_squad_files/src/morshed_squad_files/processing/: __init__.py  constraints.py  processor.py  transformers.py  validators.py
lib/morshed_squad_files/src/morshed_squad_files/resolution/: __init__.py  resolver.py  utils.py
lib/morshed_squad_files/src/morshed_squad_files/uploaders/: __init__.py  anthropic.py  base.py  bedrock.py  factory.py  gemini.py  openai.py
lib/morshed_squad_tools/: BUILDING_TOOLS.md  README.md  pyproject.toml
lib/morshed_squad_tools/tests/: base_tool_test.py  file_read_tool_test.py
morshed_squad_ui/: app.py  morshed_outreach_report.xlsx  style.css
(+600 files in other folders)
